--- a/po/stellarium/cs.po
+++ b/po/stellarium/cs.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-12 23:35+0700\n"
-"PO-Revision-Date: 2012-08-06 20:46+0000\n"
+"PO-Revision-Date: 2012-08-14 20:43+0000\n"
 "Last-Translator: Zbyněk Schwarz <Unknown>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-13 05:15+0000\n"
-"X-Generator: Launchpad (build 15791)\n"
+"X-Launchpad-Export-Date: 2012-08-15 04:38+0000\n"
+"X-Generator: Launchpad (build 15801)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -175,12 +175,12 @@ msgstr "Osvětleno: %1%"
 #: src/core/modules/MinorPlanet.cpp:192
 #, qt-format
 msgid "Provisional designation: %1"
-msgstr ""
+msgstr "Předběžné označení: %1"
 
 #: src/core/modules/MinorPlanet.cpp:247
 #, qt-format
 msgid "Orbital period: %1 days"
-msgstr ""
+msgstr "Doba oběhu: %1 dní"
 
 #: src/core/modules/StarWrapper.cpp:52
 #, qt-format
@@ -825,7 +825,7 @@ msgstr "Dráhy planet"
 
 #: src/gui/StelGui.cpp:194
 msgid "Night vision mode"
-msgstr ""
+msgstr "Režim nočního vidění"
 
 #: src/gui/StelGui.cpp:195
 msgid "Full-screen mode"
@@ -6503,11 +6503,11 @@ msgstr "Aktualizovat data exoplanet z internetu"
 
 #: plugins/Observability/src/Observability.cpp:68
 msgid "Observability analysis"
-msgstr ""
+msgstr "Rozbor pozorovatelnosti"
 
 #: plugins/Observability/src/Observability.cpp:69
 msgid "Ivan Marti-Vidal (Onsala Space Observatory)"
-msgstr ""
+msgstr "Ivan Marti-Vidal (Vesmírná observatoř Onsala)"
 
 #: plugins/Observability/src/Observability.cpp:71
 msgid ""
@@ -6522,17 +6522,17 @@ msgstr ""
 
 #: plugins/Observability/src/Observability.cpp:222
 msgid "Observability"
-msgstr ""
+msgstr "Pozorovatelnost"
 
 #: plugins/Observability/src/Observability.cpp:228
 msgid "Observability configuration window"
-msgstr ""
+msgstr "Okno nastavení pozorovatelnosti"
 
 #: plugins/Observability/src/Observability.cpp:431
 #: plugins/Observability/src/Observability.cpp:432
 #: plugins/Observability/src/Observability.cpp:475
 msgid "h"
-msgstr ""
+msgstr "h"
 
 #: plugins/Observability/src/Observability.cpp:431
 #: plugins/Observability/src/Observability.cpp:432
@@ -6544,49 +6544,49 @@ msgstr "m"
 #: plugins/Observability/src/Observability.cpp:432
 #: plugins/Observability/src/Observability.cpp:475
 msgid "s"
-msgstr ""
+msgstr "s"
 
 #: plugins/Observability/src/Observability.cpp:441
 #, qt-format
 msgid "Sets at %1 (in %2)"
-msgstr ""
+msgstr "Zapadá v %1 (ve %2)"
 
 #: plugins/Observability/src/Observability.cpp:442
 #, qt-format
 msgid "Raised at %1 (%2 ago)"
-msgstr ""
+msgstr "Vychází v %1 (ve %2)"
 
 #: plugins/Observability/src/Observability.cpp:452
 #, qt-format
 msgid "Has set at %1 (%2 ago)"
-msgstr ""
+msgstr "Zapadlo v %1 (před %2)"
 
 #: plugins/Observability/src/Observability.cpp:453
 #, qt-format
 msgid "Raises at %1 (in %2)"
-msgstr ""
+msgstr "Vychází v %1 (ve %2)"
 
 #: plugins/Observability/src/Observability.cpp:457
 msgid "Circumpolar."
-msgstr ""
+msgstr "Cirkumpolární."
 
 #: plugins/Observability/src/Observability.cpp:457
 msgid "No rise."
-msgstr ""
+msgstr "Nevychází."
 
 #: plugins/Observability/src/Observability.cpp:480
 #, qt-format
 msgid "Culminates at %1 (in %2) at %3 deg."
-msgstr ""
+msgstr "Kulminace %1 (ve %2) na %3 stup."
 
 #: plugins/Observability/src/Observability.cpp:484
 #, qt-format
 msgid "Culminated at %1 (%2 ago) at %3 deg."
-msgstr ""
+msgstr "Kulminace %1 (před %2) na %3 stup."
 
 #: plugins/Observability/src/Observability.cpp:529
 msgid "Source is not observable."
-msgstr ""
+msgstr "Zdroj není pozorovatelný."
 
 #: plugins/Observability/src/Observability.cpp:530
 msgid "No Acronychal nor Cosmical rise/set."
@@ -6594,12 +6594,12 @@ msgstr ""
 
 #: plugins/Observability/src/Observability.cpp:545
 msgid "Largest Sun separation: "
-msgstr ""
+msgstr "Největší vzdálenost od Slunce: "
 
 #: plugins/Observability/src/Observability.cpp:546
 #, qt-format
 msgid " (at %1 deg.)"
-msgstr ""
+msgstr " (na %1 atup.)"
 
 #: plugins/Observability/src/Observability.cpp:564
 msgid "Acronychal rise/set"
@@ -6620,41 +6620,41 @@ msgstr ""
 #: plugins/Observability/src/Observability.cpp:597
 #, qt-format
 msgid "from %1 to %2"
-msgstr ""
+msgstr "od %1 so %2"
 
 #: plugins/Observability/src/Observability.cpp:604
 msgid " to 31 Dec"
-msgstr ""
+msgstr " do 31. pro"
 
 #: plugins/Observability/src/Observability.cpp:611
 msgid "Observable during the whole year."
-msgstr ""
+msgstr "Pozorovatelné během celého roku."
 
 #: plugins/Observability/src/Observability.cpp:615
 msgid "Not observable at dark night."
-msgstr ""
+msgstr "Nelze pozorovat za tmavé noci."
 
 #: plugins/Observability/src/Observability.cpp:620
 msgid "Best observed"
-msgstr ""
+msgstr "Nejlépe pozorovatelné"
 
 #: plugins/Observability/src/Observability.cpp:637
 msgid " TODAY:"
-msgstr ""
+msgstr " DNES:"
 
 #: plugins/Observability/src/Observability.cpp:1240
 #, qt-format
 msgid "Previous Full Moon: %1 %2 at %3:%4. "
-msgstr ""
+msgstr "Předchozí úplněk: %1 %2 v %3:%4. "
 
 #: plugins/Observability/src/Observability.cpp:1244
 #, qt-format
 msgid "Next Full Moon: %1 %2 at %3:%4. "
-msgstr ""
+msgstr "Další úplněk: %1 %2 ve %3:%4. "
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:96
 msgid "Observability Plug-in"
-msgstr ""
+msgstr "Zásuvný modul pozorovatelnosti"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:100
 msgid ""
@@ -6670,11 +6670,11 @@ msgstr ""
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:102
 msgid "Explanation of some parameters"
-msgstr ""
+msgstr "Vysvětlení některých parametrů"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:103
 msgid "Sun altitude at twilight:"
-msgstr ""
+msgstr "Výška Slunce při soumraku:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:103
 msgid ""
@@ -6683,10 +6683,14 @@ msgid ""
 "and -18 degrees. This parameter is only used for the estimate of the range "
 "of observable epochs (see below)."
 msgstr ""
+"Všechny vesmírné objekty budou považovány za viditelné, když je Slunce pod "
+"touto výškou. Výška při astronomickém soumraku má většinou rozsah mezi -12 a "
+"-18 stupni. Tento parametr je použit pouze pro odhad rozsahu období "
+"pozorovatelnosti (viz níže)"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:104
 msgid "Today ephemeris:"
-msgstr ""
+msgstr "Dnešní efemeridy:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:104
 msgid ""
@@ -6695,6 +6699,9 @@ msgid ""
 "as time spans (referred to the current time) and as clock hours (in local "
 "time)."
 msgstr ""
+"Evidentní. Program zobrazí dobu východu, západu a  kulminaci (přechodu). "
+"Přesné doby pro tyto efemeridy jsou dány dvěma způsoby: jako časová období "
+"(řídící se současným časem) a jako hodiny (v místním čase)."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:105
 msgid "Acronychal/Cosmical rise/set:"
@@ -6715,7 +6722,7 @@ msgstr ""
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:106
 msgid "Largest Sun separation:"
-msgstr ""
+msgstr "Největší oddělení od Slunce:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:106
 msgid ""
@@ -6728,10 +6735,17 @@ msgid ""
 "at that declination. Hence, that is the 'best' night to observe a particular "
 "object."
 msgstr ""
+"Děje se při maximálním úhlovém rozdílu mezi Sluncem a vesmírným tělesem. Ve "
+"většině případů lze říci že toto je stejné jako sdělení, že délky rovníku "
+"Slunce a objektu se liší o 180 stupňů, takže Slunce je naproti objektu. Když "
+"je objekt v maximálním úhlovém rozdílu od Slunce (nezáleží, zda je to "
+"planeta nebo hvězda), kulminuje zhruba o půlnoci a na nejtemnější možé "
+"oblasti oblohy v tomto sklonu. Proto je toto 'nejlepší' noc, kdy konkrétní "
+"objekt pozorovat."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:107
 msgid "Best observed from ... to ...:"
-msgstr ""
+msgstr "Nejlépe pozorovatelné od ... do ...:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:107
 msgid ""
@@ -6755,34 +6769,36 @@ msgstr ""
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:108
 msgid "Full Moon:"
-msgstr ""
+msgstr "Úplněk:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:108
 msgid ""
 "When the Moon is selected, the program can compute the exact closest dates "
 "(up to 1 minute accuracy) of the Moon's opposition to the Sun."
 msgstr ""
+"Když je zvolen Měsíc, program může spočítat nejbližší přesná data (s "
+"přesností až na 1 minutu) kdy je Měsíc naproti Slunci."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:144
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:216
 msgid "deg."
-msgstr ""
+msgstr "stup."
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:333
 msgid "Observability Configuration"
-msgstr ""
+msgstr "Nastavení pozorovatelnosti"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:334
 msgid "Observability Plug-in Configuration"
-msgstr ""
+msgstr "Nastavení modulu pozorovatelnosti"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:336
 msgid "Showing Options"
-msgstr ""
+msgstr "Možnosti zobrazení"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:337
 msgid "Today's ephemeris (rise, set, and transit times)"
-msgstr ""
+msgstr "Dnešní efemeridy (doba východu, západu, přechodu)"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:338
 msgid "Dates of Acronychal and Cosmical rise/set"
@@ -6790,43 +6806,43 @@ msgstr ""
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:339
 msgid "Date of largest separation to the Sun"
-msgstr ""
+msgstr "Datum největší vzdálenosti od Slunce"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:340
 msgid "Range of observable epochs"
-msgstr ""
+msgstr "Rozsah pozorovatelných epoch"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:341
 msgid "Dates of previous and next Full Moon"
-msgstr ""
+msgstr "Data předchozích a příštích úplňků"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:344
 msgid "Font color and size"
-msgstr ""
+msgstr "Barva a velikost písma"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:345
 msgid "Red"
-msgstr ""
+msgstr "Červené"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:346
 msgid "Green"
-msgstr ""
+msgstr "Zelené"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:347
 msgid "Blue"
-msgstr ""
+msgstr "Modré"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:348
 msgid "Font Size"
-msgstr ""
+msgstr "Velikost písma"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:349
 msgid "Sun altitude at twilight"
-msgstr ""
+msgstr "Výška slunce za soumraku"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:350
 msgid "0 deg."
-msgstr ""
+msgstr "0 stup."
 
 #~ msgid "Equatorial Grid"
 #~ msgstr "Ekvatoriální mřížka"
