--- a/po/stellarium/de.po
+++ b/po/stellarium/de.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-12 23:35+0700\n"
-"PO-Revision-Date: 2012-08-12 00:09+0000\n"
+"PO-Revision-Date: 2012-08-14 15:28+0000\n"
 "Last-Translator: gzotti <Georg.Zotti@univie.ac.at>\n"
 "Language-Team: <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-13 05:17+0000\n"
-"X-Generator: Launchpad (build 15791)\n"
+"X-Launchpad-Export-Date: 2012-08-15 04:38+0000\n"
+"X-Generator: Launchpad (build 15801)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -177,12 +177,12 @@ msgstr "Erleuchtet: %1%"
 #: src/core/modules/MinorPlanet.cpp:192
 #, qt-format
 msgid "Provisional designation: %1"
-msgstr ""
+msgstr "Vorläufige Bezeichnung: %1"
 
 #: src/core/modules/MinorPlanet.cpp:247
 #, qt-format
 msgid "Orbital period: %1 days"
-msgstr ""
+msgstr "Umlaufzeit: %1"
 
 #: src/core/modules/StarWrapper.cpp:52
 #, qt-format
@@ -1741,7 +1741,7 @@ msgid ""
 "(location=Rangpur, Bangladesh)."
 msgstr ""
 "Skript zum Demonstrieren der totalen Sonnenfinsternis im Jahr 2009 (Ort= "
-"Ranpur, Bangladesch)"
+"Rangpur, Bangladesch)."
 
 #: src/translations.h:224
 msgid "Script which runs automatically at startup"
@@ -1769,12 +1769,18 @@ msgid ""
 "Just before Mars eclipses the sun, Phobos pops out from behind and eclipses "
 "it first. Takes place between Scorpio and Sagittarius on April 26, 2017."
 msgstr ""
+"Gerade als Mars ansetzt, die Sonne zu verdecken, tritt Phobos hinter dem "
+"Planeten hervor und geht vor der Sonne vorüber. Zu sehen auf Deimos am 26. "
+"April 2017 zwischen Skorpion und Schützen (im Schlangenträger)."
 
 #: src/translations.h:228
 msgid ""
 "Just before Mars eclipses the sun, Phobos pops out from behind and eclipses "
 "it first. Takes place between Taurus and Gemini on July 23, 2031."
 msgstr ""
+"Gerade als Mars ansetzt, die Sonne zu verdecken, tritt Phobos hinter dem "
+"Planeten hervor und geht vor der Sonne vorüber. Zu sehen auf Deimos am 23. "
+"Juli 2031 zwischen Stier und Zwillingen."
 
 #: src/translations.h:229
 msgid "Phobos Eclipses the sun as seen from Olympus Mons Jan 10, 2068."
@@ -1797,6 +1803,10 @@ msgid ""
 "in the SH) again, then Mars totally eclipses the sun and Phobos, and then as "
 "Phobos emerges from the sun it passes through Mars' shadow and dims."
 msgstr ""
+"Phobos zieht Mars dem voran und vor der Sonne vorbei, kehrt um, zieht erneut "
+"vor der Sonne vorbei in dem Moment, als Mars die beiden völlig verdeckt. Als "
+"Phobos wieder hinter Mars hervortritt, ist er noch vom Schatten des Planeten "
+"verfinstert und tritt erst kurz danach wieder aus dem Schatten hervor."
 
 #: src/translations.h:231
 msgid ""
@@ -2045,7 +2055,7 @@ msgstr "Kap Verde"
 
 #: src/translations.h:291
 msgid "Christmas Island"
-msgstr "Weihnachtsinseln"
+msgstr "Weihnachtsinsel"
 
 #: src/translations.h:292
 msgid "Cyprus"
@@ -3492,11 +3502,11 @@ msgstr "Zeige Spiegelungsschaltflächen"
 
 #: src/ui_configurationDialog.h:1021
 msgid "Toggle display backgrounds of the nebulae."
-msgstr ""
+msgstr "Umschalten des Anzeige von Deep-Sky-Bildern."
 
 #: src/ui_configurationDialog.h:1023
 msgid "Show nebula background button"
-msgstr ""
+msgstr "Zeige Schaltfläche für Deep-Sky-Bilder"
 
 #: src/ui_configurationDialog.h:1024
 msgid "Planetarium options"
@@ -6180,7 +6190,7 @@ msgstr ""
 
 #: plugins/Quasars/src/gui/QuasarsDialog.cpp:116
 msgid "Veron+ 2010"
-msgstr ""
+msgstr "Veron+ 2010"
 
 #: plugins/Quasars/src/gui/QuasarsDialog.cpp:198
 msgid "Quasars is updated"
@@ -6236,27 +6246,27 @@ msgstr ""
 
 #: plugins/Pulsars/src/Pulsar.cpp:149
 msgid "Dispersion measure:"
-msgstr ""
+msgstr "Dispersionsmaß:"
 
 #. TRANSLATORS: Unit of measure for distance - centimeters
 #: plugins/Pulsars/src/Pulsar.cpp:152
 msgid "cm"
-msgstr "Zentimeter"
+msgstr "cm"
 
 #. TRANSLATORS: Unit of measure for distance - parsecs
 #: plugins/Pulsars/src/Pulsar.cpp:155
 msgid "pc"
-msgstr "Parsec"
+msgstr "pc"
 
 #: plugins/Pulsars/src/Pulsar.cpp:161
 #, qt-format
 msgid "Spin down energy loss rate: %1 ergs/s"
-msgstr ""
+msgstr "Abbremsungs-Energieverlustrate: %1 ergs/s"
 
 #: plugins/Pulsars/src/Pulsar.cpp:165
 #, qt-format
 msgid "Binary period of pulsar: %1 days"
-msgstr ""
+msgstr "Umlaufzeit des Doppelsystems: %1 Tage"
 
 #: plugins/Pulsars/src/Pulsar.cpp:169
 #, qt-format
@@ -6272,7 +6282,7 @@ msgstr "Jährliche Parallaxe: %1 mas"
 #: plugins/Pulsars/src/Pulsar.cpp:178
 #, qt-format
 msgid "Distance based on electron density model: %1 kpc (%2 ly)"
-msgstr ""
+msgstr "Entfernung nach dem Elektronendichtemodell: %1 kpc (%2 LJ)"
 
 #: plugins/Pulsars/src/Pulsar.cpp:182
 #, qt-format
@@ -6525,11 +6535,11 @@ msgstr "Exoplaneten-Daten aus dem Internet aktualisieren"
 
 #: plugins/Observability/src/Observability.cpp:68
 msgid "Observability analysis"
-msgstr ""
+msgstr "Sichtbarkeitsanalyse"
 
 #: plugins/Observability/src/Observability.cpp:69
 msgid "Ivan Marti-Vidal (Onsala Space Observatory)"
-msgstr ""
+msgstr "Ivan Marti-Vidal (Onsala Space Observatory)"
 
 #: plugins/Observability/src/Observability.cpp:71
 msgid ""
@@ -6541,20 +6551,27 @@ msgid ""
 "the quantities shown by this script is given in the 'About' tab of the "
 "configuration window"
 msgstr ""
+"Bietet eine Analyse der Sichtbarkeit (Auf-, Untergang, Meridiandurchgang), "
+"sowie die Zeiten im Jahr mit bester Beobachtbarkeit. Ein Objekt gilt als "
+"beobachtbar, wenn es bei eingestellter Sonnentiefe über dem Horizont steht. "
+"Das Plugin ermittelt auch den Tag der größten Distanz von der Sonne "
+"(Opposition bzw. größte Elongation) sowie Akronychische und Kosmische Auf- "
+"und Untergänge.<br><br>Eine Erklärung der Begriffe finden Sie im \"Über...\"-"
+"Tab im Konfigurationsfenster."
 
 #: plugins/Observability/src/Observability.cpp:222
 msgid "Observability"
-msgstr ""
+msgstr "Beobachtbarkeit"
 
 #: plugins/Observability/src/Observability.cpp:228
 msgid "Observability configuration window"
-msgstr ""
+msgstr "Konfigurationsfenster für Beobachtbarkeit"
 
 #: plugins/Observability/src/Observability.cpp:431
 #: plugins/Observability/src/Observability.cpp:432
 #: plugins/Observability/src/Observability.cpp:475
 msgid "h"
-msgstr ""
+msgstr "h"
 
 #: plugins/Observability/src/Observability.cpp:431
 #: plugins/Observability/src/Observability.cpp:432
@@ -6566,117 +6583,117 @@ msgstr "m"
 #: plugins/Observability/src/Observability.cpp:432
 #: plugins/Observability/src/Observability.cpp:475
 msgid "s"
-msgstr ""
+msgstr "s"
 
 #: plugins/Observability/src/Observability.cpp:441
 #, qt-format
 msgid "Sets at %1 (in %2)"
-msgstr ""
+msgstr "Untergang um %1 (in %2)"
 
 #: plugins/Observability/src/Observability.cpp:442
 #, qt-format
 msgid "Raised at %1 (%2 ago)"
-msgstr ""
+msgstr "Aufgegangen um %1 (vor %2)"
 
 #: plugins/Observability/src/Observability.cpp:452
 #, qt-format
 msgid "Has set at %1 (%2 ago)"
-msgstr ""
+msgstr "Untergegangen um %1 (vor %2)"
 
 #: plugins/Observability/src/Observability.cpp:453
 #, qt-format
 msgid "Raises at %1 (in %2)"
-msgstr ""
+msgstr "Aufgang um %1 (in %2)"
 
 #: plugins/Observability/src/Observability.cpp:457
 msgid "Circumpolar."
-msgstr ""
+msgstr "Zirkumpolar"
 
 #: plugins/Observability/src/Observability.cpp:457
 msgid "No rise."
-msgstr ""
+msgstr "Kein Aufgang."
 
 #: plugins/Observability/src/Observability.cpp:480
 #, qt-format
 msgid "Culminates at %1 (in %2) at %3 deg."
-msgstr ""
+msgstr "Kulmination um %1 (in %2) bei %3 Grad."
 
 #: plugins/Observability/src/Observability.cpp:484
 #, qt-format
 msgid "Culminated at %1 (%2 ago) at %3 deg."
-msgstr ""
+msgstr "Kulmination war um %1 (in %2) bei %3 Grad."
 
 #: plugins/Observability/src/Observability.cpp:529
 msgid "Source is not observable."
-msgstr ""
+msgstr "Objekt nicht beobachtbar."
 
 #: plugins/Observability/src/Observability.cpp:530
 msgid "No Acronychal nor Cosmical rise/set."
-msgstr ""
+msgstr "Kein Akronychischer oder Kosmischer Auf- bzw. Untergang."
 
 #: plugins/Observability/src/Observability.cpp:545
 msgid "Largest Sun separation: "
-msgstr ""
+msgstr "Größte Elongation: "
 
 #: plugins/Observability/src/Observability.cpp:546
 #, qt-format
 msgid " (at %1 deg.)"
-msgstr ""
+msgstr " (bei %1 Grad)"
 
 #: plugins/Observability/src/Observability.cpp:564
 msgid "Acronychal rise/set"
-msgstr ""
+msgstr "Akronychischer Auf-/Untergang"
 
 #: plugins/Observability/src/Observability.cpp:564
 msgid "No Acronychal rise/set."
-msgstr ""
+msgstr "Kein akronychischer Auf-/Untergang"
 
 #: plugins/Observability/src/Observability.cpp:565
 msgid "Cosmical rise/set"
-msgstr ""
+msgstr "Kosmischer Auf-/Untergang"
 
 #: plugins/Observability/src/Observability.cpp:565
 msgid "No Cosmical rise/set."
-msgstr ""
+msgstr "Kein kosmischer Auf-/Untergang"
 
 #: plugins/Observability/src/Observability.cpp:597
 #, qt-format
 msgid "from %1 to %2"
-msgstr ""
+msgstr "von %1 bis %2"
 
 #: plugins/Observability/src/Observability.cpp:604
 msgid " to 31 Dec"
-msgstr ""
+msgstr " bis 31. Dez"
 
 #: plugins/Observability/src/Observability.cpp:611
 msgid "Observable during the whole year."
-msgstr ""
+msgstr "Das ganze Jahr beobachtbar."
 
 #: plugins/Observability/src/Observability.cpp:615
 msgid "Not observable at dark night."
-msgstr ""
+msgstr "Nicht beobachtbar bei dunkler Nacht."
 
 #: plugins/Observability/src/Observability.cpp:620
 msgid "Best observed"
-msgstr ""
+msgstr "Am besten zu beobachten"
 
 #: plugins/Observability/src/Observability.cpp:637
 msgid " TODAY:"
-msgstr ""
+msgstr " HEUTE:"
 
 #: plugins/Observability/src/Observability.cpp:1240
 #, qt-format
 msgid "Previous Full Moon: %1 %2 at %3:%4. "
-msgstr ""
+msgstr "Letzter Vollmond: %1 %2 um %3:%4. "
 
 #: plugins/Observability/src/Observability.cpp:1244
 #, qt-format
 msgid "Next Full Moon: %1 %2 at %3:%4. "
-msgstr ""
+msgstr "Nächster Vollmond: %1 %2 um %3:%4. "
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:96
 msgid "Observability Plug-in"
-msgstr ""
+msgstr "Beobachtbarkeits-Plugin"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:100
 msgid ""
@@ -6689,14 +6706,23 @@ msgid ""
 "taken into account.<br><br> The author thanks Alexander Wolf and Georg Zotti "
 "for their advice.<br><br>Ivan Marti-Vidal (Onsala Space Observatory)"
 msgstr ""
+"Analyse der Beobachtbarkeit des markierten Objekts (oder der Bildschirmmitte "
+"wenn kein Objekt gewählt). Das Plugin kann Zeiten von Aufgang, Transit "
+"(Kulmination) und Untergang bestimmen sowie die besten Zeiträume zur "
+"Beobachtung im Jahr (Opposition bzw. größte Elongation), wann das Objekt bei "
+"gewählter Sonnentiefe über dem Horizont ist, sowie die Daten von "
+"akronychischen und kosmischen Auf- und Untergängen. <br>Ephemeriden für "
+"Objekte des Sonnensystems und Parallaxeneffekte werden "
+"berücksichtigt.<br><br>Der Autor dankt Alexander Wolf und Georg Zotti für "
+"ihre Hinweise.<br><br>Ivan Marti-Vidal (Onsala Space Observatory)"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:102
 msgid "Explanation of some parameters"
-msgstr ""
+msgstr "Erklärung einiger Werte und Begriffe"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:103
 msgid "Sun altitude at twilight:"
-msgstr ""
+msgstr "Sonnentiefe als Nachtgrenze:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:103
 msgid ""
@@ -6705,10 +6731,15 @@ msgid ""
 "and -18 degrees. This parameter is only used for the estimate of the range "
 "of observable epochs (see below)."
 msgstr ""
+"Ein Himmelsobjekt über dem Horizont wird als sichtbar befunden wenn die "
+"Sonne unter dieser Tiefe steht. Während der astronomischen Dämmerung steht "
+"die Sonne zwischen -12 und -18 Grad, ein Restlicht erhellt den Horizont in "
+"ihrer Richtung. Dieser Wert wird nur zur Abschätzung der "
+"Sichtbarkeitsperioden verwendet (siehe unten)."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:104
 msgid "Today ephemeris:"
-msgstr ""
+msgstr "Heutige Sichtbarkeit:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:104
 msgid ""
@@ -6717,10 +6748,14 @@ msgid ""
 "as time spans (referred to the current time) and as clock hours (in local "
 "time)."
 msgstr ""
+"Selbsterklärend. Das Programm zeigt Auf-, Untergangs- und Kulminations- "
+"(Meridiantransit-) Zeiten. Die genauen Zeiten werden auf zwei Arten "
+"angezeigt: Uhrzeit (lokale Zeit) und Zeitunterschied zur gegenwärtig "
+"eingestellten Zeit."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:105
 msgid "Acronychal/Cosmical rise/set:"
-msgstr ""
+msgstr "Akronychischer/Kosmischer Auf-/Untergang:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:105
 msgid ""
@@ -6734,10 +6769,20 @@ msgid ""
 "that the source is hardly observable (or not observable at all) in the dates "
 "between Cosmical set and rise."
 msgstr ""
+"Der akronychische Aufgang (bzw. Untergang) eines Objekts bedeutet Aufgang "
+"(bzw. Untergang) bei Sonnenuntergang (bzw. -aufgang). (Sonne und Objekt "
+"stehen einander ungefähr gegenüber. ) Die genauen Daten sind abhängig vom "
+"Beobachtungsort. Zwischen akronychischem Unter- (am Morgenhimmel) und "
+"Aufgang (am Abendhimmel) ist das Objekt im allgemeinen am besten "
+"beobachtbar, es steht am höchsten wenn die Sonne unter dem Horizont ist. Im "
+"Gegensatz dazu gehen Objekt und Sonne beim kosmischen Auf- bzw. Untergang "
+"gleichzeitig auf bzw. unter.  Dieses Phänomen entzieht sich wegen der alles "
+"überstrahlenden Sonne in der Regel der freisichtigen Beobachtung. Zwischen "
+"kosmischem Unter- und Aufgang ist ein Objekt im allgemeinen unbeobachtbar."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:106
 msgid "Largest Sun separation:"
-msgstr ""
+msgstr "Größter Winkelabstand von der Sonne:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:106
 msgid ""
@@ -6750,10 +6795,14 @@ msgid ""
 "at that declination. Hence, that is the 'best' night to observe a particular "
 "object."
 msgstr ""
+"Für Sterne und die äußern Planeten ist dies das Datum der Opposition, für "
+"innere Planeten (Merkur, Venus) das Datum der größten Elongation. Im Fall "
+"der Opposition kulminiert das Objekt gegen Mitternacht, das ist somit i.a. "
+"die beste Nacht zur Beobachtung."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:107
 msgid "Best observed from ... to ...:"
-msgstr ""
+msgstr "Am besten zu beobachten von ... bis ...:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:107
 msgid ""
@@ -6774,81 +6823,97 @@ msgid ""
 "planets (which will not depend on the mere input of a twilight Sun elevation "
 "by the user) will be implemented in future versions of this plugin."
 msgstr ""
+"Das Programm berechnet den Zeitraum wenn das gewählte Himmelsobjekt sich "
+"zumindest kurz während der Nacht über dem Horizont befindet. \"Nacht\" "
+"beschreibt hier den Zeitraum, in dem die Sonne tiefer als der eingestellte "
+"Wert für die Dämmerungsgrenze steht (siehe oben). Für äußere Planeten und "
+"Objekte der Fixsternsphäre gibt es entweder einen Zeitraum (z.B. 20. Jan bis "
+"15. Sep) oder zwei (1. Jan bis zu einem Datum und von einem anderen Fatum "
+"bis 31. Dez). Im ersten Fall sollte das erste Datum nahe beim Heliakischen "
+"Aufgang, das zweite nahe beim Heliakischen Untergang liegen. Im zweiten Fall "
+"(z.B. in der Form '1. Jan bis 20. Mai und 21. Sep bis 31 Dez') läge das "
+"Enddatum des ersten Zeitraums (hier: 20. Mai) nahe dem Heliakischen "
+"Untergang, das Anfangsdatum des zweiten (hier: 21. Sep) läge nahe dem "
+"Heliakischen Aufgang. Eine bessere Abschätzung der Heliakischen Daten ist "
+"für spätere Versionen des Plugins geplant."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:108
 msgid "Full Moon:"
-msgstr ""
+msgstr "Vollmond:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:108
 msgid ""
 "When the Moon is selected, the program can compute the exact closest dates "
 "(up to 1 minute accuracy) of the Moon's opposition to the Sun."
 msgstr ""
+"Wenn der Mond gewählt ist, berechnet das Programm den genauen Zeitpunkt (bis "
+"1 Minute genau) der Opposition des Mondes zur Sonne."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:144
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:216
 msgid "deg."
-msgstr ""
+msgstr "Grad"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:333
 msgid "Observability Configuration"
-msgstr ""
+msgstr "Konfiguration der Beobachtbarkeit"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:334
 msgid "Observability Plug-in Configuration"
-msgstr ""
+msgstr "Konfiguration des Plugins für Beobachtbarkeit"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:336
 msgid "Showing Options"
-msgstr ""
+msgstr "Anzuzeigende Daten"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:337
 msgid "Today's ephemeris (rise, set, and transit times)"
-msgstr ""
+msgstr "Heutige Sichtbarkeit (Aufgang, Untergang, Meridiantransit)"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:338
 msgid "Dates of Acronychal and Cosmical rise/set"
-msgstr ""
+msgstr "Daten von akronychischem und kosmischem Auf-/Untergang"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:339
 msgid "Date of largest separation to the Sun"
 msgstr ""
+"Datum des größten Winkelabstands zur Sonne (Opposition bzw. gr. Elongation)"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:340
 msgid "Range of observable epochs"
-msgstr ""
+msgstr "Beobachtungszeiträume"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:341
 msgid "Dates of previous and next Full Moon"
-msgstr ""
+msgstr "Daten der vorigen und nächsten Vollmonde"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:344
 msgid "Font color and size"
-msgstr ""
+msgstr "Schriftfarbe und -größe"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:345
 msgid "Red"
-msgstr ""
+msgstr "Rot"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:346
 msgid "Green"
-msgstr ""
+msgstr "Grün"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:347
 msgid "Blue"
-msgstr ""
+msgstr "Blau"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:348
 msgid "Font Size"
-msgstr ""
+msgstr "Schriftgröße"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:349
 msgid "Sun altitude at twilight"
-msgstr ""
+msgstr "Sonnentiefe als Dämmerungsgrenze"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:350
 msgid "0 deg."
-msgstr ""
+msgstr "0 Grad"
 
 #~ msgid "Stars "
 #~ msgstr "Sterne "
