--- a/po/stellarium/ms.po
+++ b/po/stellarium/ms.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-12 23:35+0700\n"
-"PO-Revision-Date: 2012-08-11 22:49+0000\n"
+"PO-Revision-Date: 2012-08-14 14:40+0000\n"
 "Last-Translator: abuyop <Unknown>\n"
 "Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-13 05:19+0000\n"
-"X-Generator: Launchpad (build 15791)\n"
+"X-Launchpad-Export-Date: 2012-08-15 04:38+0000\n"
+"X-Generator: Launchpad (build 15801)\n"
 
 #: src/core/modules/GridLinesMgr.cpp:542 src/ui_viewDialog.h:1168
 msgid "Meridian"
@@ -175,12 +175,12 @@ msgstr "Disinari: %1%"
 #: src/core/modules/MinorPlanet.cpp:192
 #, qt-format
 msgid "Provisional designation: %1"
-msgstr ""
+msgstr "Penentuan sementara: %1"
 
 #: src/core/modules/MinorPlanet.cpp:247
 #, qt-format
 msgid "Orbital period: %1 days"
-msgstr ""
+msgstr "Tempoh orbital: %1 hari"
 
 #: src/core/modules/StarWrapper.cpp:52
 #, qt-format
@@ -6523,11 +6523,11 @@ msgstr "Kemaskini data eksoplanet dari Internet"
 
 #: plugins/Observability/src/Observability.cpp:68
 msgid "Observability analysis"
-msgstr ""
+msgstr "Analisis ketercerapan"
 
 #: plugins/Observability/src/Observability.cpp:69
 msgid "Ivan Marti-Vidal (Onsala Space Observatory)"
-msgstr ""
+msgstr "Ivan Marti-Vidal (Balai Cerap Angkasa Onsala)"
 
 #: plugins/Observability/src/Observability.cpp:71
 msgid ""
@@ -6539,142 +6539,149 @@ msgid ""
 "the quantities shown by this script is given in the 'About' tab of the "
 "configuration window"
 msgstr ""
+"Laporkan analisi bagi kebolehcerapan sumber (terbit, terbenam, dan masa "
+"peralihan), begitu juga epok tahunan bilamana sumber adalah pada masa "
+"terbaik dicerap. Ia menganggap sumber tersebut adalah boleh dicerap jika "
+"berada diatas ufuk pada sebahagian daripada malam. Pemalam juga memberikan "
+"hari bagi pemisahan terbesar Matahari dan hari terbit/terbenam Akronik dan "
+"Kosmos. Satu penerangan kuantiti juga dipaparkan oleh skrip ini dinyatakan "
+"dalam tab 'Perihal' dalam tetingkap konfigurasi."
 
 #: plugins/Observability/src/Observability.cpp:222
 msgid "Observability"
-msgstr ""
+msgstr "Ketercerapan"
 
 #: plugins/Observability/src/Observability.cpp:228
 msgid "Observability configuration window"
-msgstr ""
+msgstr "Tetingkap konfigurasi ketercerapan"
 
 #: plugins/Observability/src/Observability.cpp:431
 #: plugins/Observability/src/Observability.cpp:432
 #: plugins/Observability/src/Observability.cpp:475
 msgid "h"
-msgstr ""
+msgstr "j"
 
 #: plugins/Observability/src/Observability.cpp:431
 #: plugins/Observability/src/Observability.cpp:432
 #: plugins/Observability/src/Observability.cpp:475
 msgid "m"
-msgstr ""
+msgstr "m"
 
 #: plugins/Observability/src/Observability.cpp:431
 #: plugins/Observability/src/Observability.cpp:432
 #: plugins/Observability/src/Observability.cpp:475
 msgid "s"
-msgstr ""
+msgstr "s"
 
 #: plugins/Observability/src/Observability.cpp:441
 #, qt-format
 msgid "Sets at %1 (in %2)"
-msgstr ""
+msgstr "Terbenam pada %1 (pada %2)"
 
 #: plugins/Observability/src/Observability.cpp:442
 #, qt-format
 msgid "Raised at %1 (%2 ago)"
-msgstr ""
+msgstr "Terbit pada %1 (%2 yang lalu)"
 
 #: plugins/Observability/src/Observability.cpp:452
 #, qt-format
 msgid "Has set at %1 (%2 ago)"
-msgstr ""
+msgstr "Telah terbenam pada %1 (%2 yang lalu)"
 
 #: plugins/Observability/src/Observability.cpp:453
 #, qt-format
 msgid "Raises at %1 (in %2)"
-msgstr ""
+msgstr "Terbit pada %1 (pada %2)"
 
 #: plugins/Observability/src/Observability.cpp:457
 msgid "Circumpolar."
-msgstr ""
+msgstr "Keliling kutub."
 
 #: plugins/Observability/src/Observability.cpp:457
 msgid "No rise."
-msgstr ""
+msgstr "Tiada terbit."
 
 #: plugins/Observability/src/Observability.cpp:480
 #, qt-format
 msgid "Culminates at %1 (in %2) at %3 deg."
-msgstr ""
+msgstr "Berakhir pada %1 (dalam %2) pada %3 darj."
 
 #: plugins/Observability/src/Observability.cpp:484
 #, qt-format
 msgid "Culminated at %1 (%2 ago) at %3 deg."
-msgstr ""
+msgstr "Berakhir pada %1 (%2 yang lalu) pada %3 darj."
 
 #: plugins/Observability/src/Observability.cpp:529
 msgid "Source is not observable."
-msgstr ""
+msgstr "Sumber tidak boleh dicerap."
 
 #: plugins/Observability/src/Observability.cpp:530
 msgid "No Acronychal nor Cosmical rise/set."
-msgstr ""
+msgstr "Tiada terbit/terbenam Akronik ataupun Kosmos."
 
 #: plugins/Observability/src/Observability.cpp:545
 msgid "Largest Sun separation: "
-msgstr ""
+msgstr "Pemisahan Matahari yang terbesar: "
 
 #: plugins/Observability/src/Observability.cpp:546
 #, qt-format
 msgid " (at %1 deg.)"
-msgstr ""
+msgstr " (pada %1 darj.)"
 
 #: plugins/Observability/src/Observability.cpp:564
 msgid "Acronychal rise/set"
-msgstr ""
+msgstr "Terbit/terbenam akronik"
 
 #: plugins/Observability/src/Observability.cpp:564
 msgid "No Acronychal rise/set."
-msgstr ""
+msgstr "Tiada terbit/terbenam akronik."
 
 #: plugins/Observability/src/Observability.cpp:565
 msgid "Cosmical rise/set"
-msgstr ""
+msgstr "Terbit/terbenam kosmik"
 
 #: plugins/Observability/src/Observability.cpp:565
 msgid "No Cosmical rise/set."
-msgstr ""
+msgstr "Tiada terbit/terbenam kosmik."
 
 #: plugins/Observability/src/Observability.cpp:597
 #, qt-format
 msgid "from %1 to %2"
-msgstr ""
+msgstr "dari %1 kepada %2"
 
 #: plugins/Observability/src/Observability.cpp:604
 msgid " to 31 Dec"
-msgstr ""
+msgstr " sehingga 31 Dis"
 
 #: plugins/Observability/src/Observability.cpp:611
 msgid "Observable during the whole year."
-msgstr ""
+msgstr "Boleh dicerap sepanjang tahun."
 
 #: plugins/Observability/src/Observability.cpp:615
 msgid "Not observable at dark night."
-msgstr ""
+msgstr "Tidak boleh dicerap pada waktu malam."
 
 #: plugins/Observability/src/Observability.cpp:620
 msgid "Best observed"
-msgstr ""
+msgstr "Terbaik dicerap"
 
 #: plugins/Observability/src/Observability.cpp:637
 msgid " TODAY:"
-msgstr ""
+msgstr " HARI INI:"
 
 #: plugins/Observability/src/Observability.cpp:1240
 #, qt-format
 msgid "Previous Full Moon: %1 %2 at %3:%4. "
-msgstr ""
+msgstr "Bulan Purnama Terdahulu: %1 %2 pada %3:%4. "
 
 #: plugins/Observability/src/Observability.cpp:1244
 #, qt-format
 msgid "Next Full Moon: %1 %2 at %3:%4. "
-msgstr ""
+msgstr "Bulan Purnama Berikutnya: %1 %2 pada %3:%4. "
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:96
 msgid "Observability Plug-in"
-msgstr ""
+msgstr "Pemalam Ketercerapan"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:100
 msgid ""
@@ -6687,14 +6694,22 @@ msgid ""
 "taken into account.<br><br> The author thanks Alexander Wolf and Georg Zotti "
 "for their advice.<br><br>Ivan Marti-Vidal (Onsala Space Observatory)"
 msgstr ""
+"Pemalam yang menganalisis bagi kebolehcerapan sumber (atau tengahkan skrin, "
+"jika tiada sumber dipilih). Pemalam boleh paparkan masa terbit, peralihan "
+"dan terbenam, begitu juga epok tahunan (iaitu pemisahan bersudut dari "
+"Matahari), julat tarikh bila sumber  berada diatas ufuk pada malam yang "
+"gelap. dan tarikh masa terbit/terbenam Akronik dan Kosmos. .<br>Efemeris "
+"objek Sistem Suria dan kesan paralaks juga diambil kira.<br><br> Pengarang "
+"mengucapkan terima kasih keatas Alexander Wolf dan Georg Zotti atas nasihat "
+"mereka.<br><br>Ivan Marti-Vidal (Balai Cerap Angkasa Onsala)"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:102
 msgid "Explanation of some parameters"
-msgstr ""
+msgstr "Penerangan beberapa parameter"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:103
 msgid "Sun altitude at twilight:"
-msgstr ""
+msgstr "Altitut Matahari pada waktu senja:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:103
 msgid ""
@@ -6703,10 +6718,14 @@ msgid ""
 "and -18 degrees. This parameter is only used for the estimate of the range "
 "of observable epochs (see below)."
 msgstr ""
+"Sebarang objek cakerawala akan dianggap kelihatan bila Matahari berada "
+"dibawah altitud ini. Altitud pada julat senja biasanya diantara -12 hingga -"
+"18 darjah. Parameter ini hanya digunakan untuk menganggar julat bagi epok "
+"yang boleh dicerap (rujuk dibawah)."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:104
 msgid "Today ephemeris:"
-msgstr ""
+msgstr "Efemeris hari ini:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:104
 msgid ""
@@ -6715,10 +6734,14 @@ msgid ""
 "as time spans (referred to the current time) and as clock hours (in local "
 "time)."
 msgstr ""
+"Penjelasan-kendiri. Program akan paparkan masa terbit, terbenam dan kemuncak "
+"(peralihan). Masa sebenar bagi efemeris ini dinyatakan dalam dua cara: "
+"sebagai rentang masa (dirujuk terhadap masa semasa) dan sebagai jam waktu "
+"(dalam masa setempat)."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:105
 msgid "Acronychal/Cosmical rise/set:"
-msgstr ""
+msgstr "Terbit/terbenam Akronik/Kosmos:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:105
 msgid ""
@@ -6735,7 +6758,7 @@ msgstr ""
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:106
 msgid "Largest Sun separation:"
-msgstr ""
+msgstr "Pemisahan Matahari yang terbesar:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:106
 msgid ""
@@ -6751,7 +6774,7 @@ msgstr ""
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:107
 msgid "Best observed from ... to ...:"
-msgstr ""
+msgstr "Terbaik dicerap dari .... hingga ...:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:107
 msgid ""
@@ -6775,78 +6798,80 @@ msgstr ""
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:108
 msgid "Full Moon:"
-msgstr ""
+msgstr "Bulan Purnama:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:108
 msgid ""
 "When the Moon is selected, the program can compute the exact closest dates "
 "(up to 1 minute accuracy) of the Moon's opposition to the Sun."
 msgstr ""
+"Bila Bulan dipilih, program boleh kira tarikh terhampir yang sebenar "
+"(sehingga ketepatan 1 minit) kedudukan Bulan terhadap Matahari."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:144
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:216
 msgid "deg."
-msgstr ""
+msgstr "darj."
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:333
 msgid "Observability Configuration"
-msgstr ""
+msgstr "Konfigurasi Ketercerapan"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:334
 msgid "Observability Plug-in Configuration"
-msgstr ""
+msgstr "Konfigurasi Pemalam Ketercerapan"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:336
 msgid "Showing Options"
-msgstr ""
+msgstr "Pilihan Paparan"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:337
 msgid "Today's ephemeris (rise, set, and transit times)"
-msgstr ""
+msgstr "Efemeris hari ini (terbit, terbenam, dan masa peralihan)"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:338
 msgid "Dates of Acronychal and Cosmical rise/set"
-msgstr ""
+msgstr "Tarikh terbit/terbenam Akronik dan Kosmos"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:339
 msgid "Date of largest separation to the Sun"
-msgstr ""
+msgstr "Tarikh pemisahan terbesar Matahari"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:340
 msgid "Range of observable epochs"
-msgstr ""
+msgstr "Julat epok boleh dicerap"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:341
 msgid "Dates of previous and next Full Moon"
-msgstr ""
+msgstr "Tarikh Bulan Purnama terdahulu dan berikutnya"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:344
 msgid "Font color and size"
-msgstr ""
+msgstr "Warna dan Saiz fon"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:345
 msgid "Red"
-msgstr ""
+msgstr "Merah"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:346
 msgid "Green"
-msgstr ""
+msgstr "Hijau"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:347
 msgid "Blue"
-msgstr ""
+msgstr "Biru"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:348
 msgid "Font Size"
-msgstr ""
+msgstr "Saiz Fon"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:349
 msgid "Sun altitude at twilight"
-msgstr ""
+msgstr "Altitud Matahari pada waktu senja"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:350
 msgid "0 deg."
-msgstr ""
+msgstr "0 darj."
 
 #~ msgid "Set Location "
 #~ msgstr "Tentukan Lokasi "
