--- a/po/stellarium/nb.po
+++ b/po/stellarium/nb.po
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: nb\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-12 23:35+0700\n"
-"PO-Revision-Date: 2012-08-13 14:27+0000\n"
+"PO-Revision-Date: 2012-08-14 19:06+0000\n"
 "Last-Translator: FreewareTips <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-14 04:43+0000\n"
-"X-Generator: Launchpad (build 15791)\n"
+"X-Launchpad-Export-Date: 2012-08-15 04:38+0000\n"
+"X-Generator: Launchpad (build 15801)\n"
 "X-Poedit-Country: NORWAY\n"
 "X-Poedit-Language: Norwegian\n"
 
@@ -6481,7 +6481,7 @@ msgstr "Observerbarhetsanalyse"
 
 #: plugins/Observability/src/Observability.cpp:69
 msgid "Ivan Marti-Vidal (Onsala Space Observatory)"
-msgstr ""
+msgstr "Ivan Marti-Vidal (Onsala rymdobservatorium)"
 
 #: plugins/Observability/src/Observability.cpp:71
 msgid ""
@@ -6493,6 +6493,12 @@ msgid ""
 "the quantities shown by this script is given in the 'About' tab of the "
 "configuration window"
 msgstr ""
+"Tilbyr en analyse av objektobserverbarhet (oppgang, nedgang og "
+"transittider), samt tider av året med den beste observerbarheten. Det antas "
+"at et objekt er observerbart hvis det er over horisonten under en del av "
+"natten. Programtillegget gir også dagen for største separasjon fra solen og "
+"dagene for akronisk og kosmisk oppgang/nedgang.<br><br> En forklaring av "
+"parametrene er gitt i  fanen 'Info' i innstillingsvinduet."
 
 #: plugins/Observability/src/Observability.cpp:222
 msgid "Observability"
@@ -6506,39 +6512,39 @@ msgstr "Innstillingsvindu for observerbarhet"
 #: plugins/Observability/src/Observability.cpp:432
 #: plugins/Observability/src/Observability.cpp:475
 msgid "h"
-msgstr ""
+msgstr "t"
 
 #: plugins/Observability/src/Observability.cpp:431
 #: plugins/Observability/src/Observability.cpp:432
 #: plugins/Observability/src/Observability.cpp:475
 msgid "m"
-msgstr ""
+msgstr "m"
 
 #: plugins/Observability/src/Observability.cpp:431
 #: plugins/Observability/src/Observability.cpp:432
 #: plugins/Observability/src/Observability.cpp:475
 msgid "s"
-msgstr ""
+msgstr "s"
 
 #: plugins/Observability/src/Observability.cpp:441
 #, qt-format
 msgid "Sets at %1 (in %2)"
-msgstr ""
+msgstr "Går ned kl. %1 (om %2)"
 
 #: plugins/Observability/src/Observability.cpp:442
 #, qt-format
 msgid "Raised at %1 (%2 ago)"
-msgstr ""
+msgstr "Steg opp kl. %1 (%2 siden)"
 
 #: plugins/Observability/src/Observability.cpp:452
 #, qt-format
 msgid "Has set at %1 (%2 ago)"
-msgstr ""
+msgstr "Har gått ned kl. %1 (%2 siden)"
 
 #: plugins/Observability/src/Observability.cpp:453
 #, qt-format
 msgid "Raises at %1 (in %2)"
-msgstr ""
+msgstr "Stiger opp kl. %1 (om %2)"
 
 #: plugins/Observability/src/Observability.cpp:457
 msgid "Circumpolar."
@@ -6551,37 +6557,37 @@ msgstr "Ingen oppgang."
 #: plugins/Observability/src/Observability.cpp:480
 #, qt-format
 msgid "Culminates at %1 (in %2) at %3 deg."
-msgstr ""
+msgstr "Kulminerer kl. %1 (om %2) ved %3 grd."
 
 #: plugins/Observability/src/Observability.cpp:484
 #, qt-format
 msgid "Culminated at %1 (%2 ago) at %3 deg."
-msgstr ""
+msgstr "Kulminerte kl. %1 (%2 siden) ved %3 grd."
 
 #: plugins/Observability/src/Observability.cpp:529
 msgid "Source is not observable."
-msgstr "Kilde er ikke observerbar."
+msgstr "Objekt er ikke observerbart."
 
 #: plugins/Observability/src/Observability.cpp:530
 msgid "No Acronychal nor Cosmical rise/set."
-msgstr ""
+msgstr "Ingen akronisk eller kosmisk oppgang/nedgang."
 
 #: plugins/Observability/src/Observability.cpp:545
 msgid "Largest Sun separation: "
-msgstr ""
+msgstr "Største separasjon til solen: "
 
 #: plugins/Observability/src/Observability.cpp:546
 #, qt-format
 msgid " (at %1 deg.)"
-msgstr ""
+msgstr " (ved %1 grd.)"
 
 #: plugins/Observability/src/Observability.cpp:564
 msgid "Acronychal rise/set"
-msgstr ""
+msgstr "Akronisk oppgang/nedgang"
 
 #: plugins/Observability/src/Observability.cpp:564
 msgid "No Acronychal rise/set."
-msgstr ""
+msgstr "Ingen akronisk oppgang/nedgang."
 
 #: plugins/Observability/src/Observability.cpp:565
 msgid "Cosmical rise/set"
@@ -6619,12 +6625,12 @@ msgstr " I DAG:"
 #: plugins/Observability/src/Observability.cpp:1240
 #, qt-format
 msgid "Previous Full Moon: %1 %2 at %3:%4. "
-msgstr ""
+msgstr "Forrige fullmåne: %1 %2 kl. %3:%4. "
 
 #: plugins/Observability/src/Observability.cpp:1244
 #, qt-format
 msgid "Next Full Moon: %1 %2 at %3:%4. "
-msgstr ""
+msgstr "Neste fullmåne: %1 %2 kl. %3:%4. "
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:96
 msgid "Observability Plug-in"
@@ -6641,6 +6647,15 @@ msgid ""
 "taken into account.<br><br> The author thanks Alexander Wolf and Georg Zotti "
 "for their advice.<br><br>Ivan Marti-Vidal (Onsala Space Observatory)"
 msgstr ""
+"Et programtillegg som analyserer observerbarheten til det valgte objektet "
+"(eller skjermsenteret hvis ingen objekt er valgt). Programtillegget kan vise "
+"oppgang, transitt og nedgangstider samt de beste periodene i året for "
+"observasjon (dvs. største vinkel-separasjon fra solen), datoperioden når "
+"objektet er over horisonten på mørke natten, og datoene for akronisk og "
+"kosmisk oppgang/nedgang.<br>Efemerider for solsystemobjektene og parallakse-"
+"effekter blir tatt hensyn til.<br><br> Utvikleren takker Alexander Wolf og "
+"Georg Zotti for deres råd.<br><br>Ivan Marti-Vidal (Onsala "
+"rymdobservatorium)."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:102
 msgid "Explanation of some parameters"
@@ -6672,7 +6687,7 @@ msgstr ""
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:105
 msgid "Acronychal/Cosmical rise/set:"
-msgstr ""
+msgstr "Akronisk/Kosmisk oppgang/nedgang:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:105
 msgid ""
@@ -6689,7 +6704,7 @@ msgstr ""
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:106
 msgid "Largest Sun separation:"
-msgstr ""
+msgstr "Største separasjon til solen:"
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:106
 msgid ""
@@ -6752,7 +6767,7 @@ msgstr "Innstilling av programtillegg for observerbarhet"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:336
 msgid "Showing Options"
-msgstr "Viser alternativer"
+msgstr "Visningsalternativer"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:337
 msgid "Today's ephemeris (rise, set, and transit times)"
@@ -6760,15 +6775,15 @@ msgstr "Dagens efemerider (oppgang, nedgang og transittider)"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:338
 msgid "Dates of Acronychal and Cosmical rise/set"
-msgstr ""
+msgstr "Dato for akronisk og kosmisk oppgang/nedgang"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:339
 msgid "Date of largest separation to the Sun"
-msgstr ""
+msgstr "Dato for største separasjon til solen"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:340
 msgid "Range of observable epochs"
-msgstr ""
+msgstr "Utvalg av observerbare epoker"
 
 #: plugins/Observability/src/ui_ObservabilityDialog.h:341
 msgid "Dates of previous and next Full Moon"
